@@ -271,7 +271,7 @@ void DocumentBuilder::consumeContent(Node *root){
 void DocumentBuilder::appendToLastTextNode(Node *root, String *stext){
   if (stext == null) return;
   Node *last = root->getLastChild();
-  if (last == null || last->getNodeType() != TEXT_NODE){
+  if (last == null || last->getNodeType() != Node::TEXT_NODE){
     root->appendChild(doc->createTextNode(stext));
   }else{
     StringBuffer *sb = (StringBuffer*)((Text*)last)->getData();
